# FEMTOFIT

./: CMakeLists.txt  Chi2Calculator.cpp  DVCS_xsec.C  DataHandler.cpp  DataHandler.h  Fitter.cpp  ModelCalculator.cpp  NewBMK.C  README.md  main.cpp
data/: output.csv  rgkdata1.csv
include/: BMKModel.h  BMK_DVCS.h  BaseModel.h  Chi2Calculator.h  DataHandler.h  DispRelSolver.h  Fitter.h  Gepard.h  KM15Model.h  ModelCalculator.h  Models.h
python_scripts/: plot_phi_scan.py
src/: BMKModel.cpp  BMK_DVCS.cpp  DataHandler.cpp  DispRelSolver.cpp  Fitter.cpp  KM15Model.cpp  Models.cpp
